Attempt to fix nav on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -207,8 +207,9 @@ input[type=submit]:hover {
 
 @media screen and (max-width: 760px) {
 	.navigation-list {
-		position: static;
-		display: non;
+		ul > lil {
+			width: 100%;
+		}
 }
 
 @media all and (max-width: 750px) {
